--- a/entry/src/main/module.json5
+++ b/entry/src/main/module.json5
@@ -29,7 +29,8 @@
               "action.system.home"
             ]
           }
-        ]
+        ],
+        "launchType": "singleton"
       }
     ]
   }
